fixed bug where uncovering footprints forced viewport into horizontal scrolling into whitespace

--- a/react-front-end/src/components/Landing.scss
+++ b/react-front-end/src/components/Landing.scss
@@ -11,7 +11,8 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  z-index: 0;
+  z-index: 1;
+  overflow: hidden;
 
   .logo {
     // text-align: center;
@@ -21,6 +22,7 @@
     font-family: "Futura";
     font-weight: medium;
     font-size: 4.5em;
+    margin: 15px 0;
     display: flex;
     justify-content: center;
     &.uncovered {
@@ -49,7 +51,7 @@
     position: absolute;
     z-index: 1;
     &.uncovered {
-      z-index: -1;
+      z-index: 0;
     }
   }
 
@@ -59,26 +61,31 @@
 		height: 40vw;
     
     &#foot_1 {
+      width: fit-content;
       bottom: 35.0%;
       left: 12.5vw;
       -webkit-animation-duration: 0.25s;
     }
     &#foot_2 {
+      width: fit-content;
       bottom: 8vh;
       left: 1.5vw;
       -webkit-animation-duration: 0.35s;
     }
     &#foot_3 {
+      width: fit-content;
       bottom: 60%;
       left: 3.3vw;
       -webkit-animation-duration: 0.45s;
     }
     &#foot_4 {
+      width: fit-content;
       bottom: 55.5%;
       right: 1.0%;
       -webkit-animation-duration: 0.55s;
     }
     &#foot_5 {
+      width: fit-content;
       bottom: 0.5vh;
       right: 6.0%;
       -webkit-animation-duration: 0.55s;
@@ -97,6 +104,8 @@
       -webkit-animation-direction: normal;
       -webkit-animation-timing-function: linear;
       -webkit-animation-fill-mode: forwards;
+      
+      z-index: 0;
     }
 	}
   
